--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,3 +1,7 @@
+:root {
+    --theme-color: rgb(115, 14, 192);
+    --sender-gradient: linear-gradient(to left ,rgba(28, 2, 49, 0.868),rgb(115, 14, 192));
+}
 
 *,
 *:is(::after, ::before) {
@@ -42,7 +46,7 @@ aside {
     overflow-y: scroll;
 }
 
-header, nav, main, aside {
+header, aside {
     border: 1px dotted black;
 }
 
@@ -92,4 +96,21 @@ ul li i {
 ul li:hover {
     color:rgba(28, 2, 49, 0.868);
     background-color: #fff;
+}
+
+main {
+    background-color: rgba(161, 14, 139, 0.101);
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.chat-viewer {
+    height: 90%;
+    width: 100%;
+}
+
+.sender {
+    height: 10%;
+    width: 100%;
+    background: var(--sender-gradient);
 }
