--- a/Styles/style.css
+++ b/Styles/style.css
@@ -113,4 +113,25 @@ main {
     height: 10%;
     width: 100%;
     background: var(--sender-gradient);
+    display: flex;
+    align-items: center;
+}
+
+.sender button {
+    height: 60%;
+    width: 10%;
+    border-radius: 2px;
+    border: none;
+    background-color: rgb(3, 1, 48);
+    font-size: 15px;
+    font-weight: 700;
+    color: #fff;
+}
+
+.sender input {
+    height: 60%;
+    width: 65%;
+    outline: none;
+    font-size: 15px;
+    padding-left: 20px;
 }
